change logo and change image Intro

--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -4,19 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/purple_700">
+    android:background="@color/white">
 
-    <com.airbnb.lottie.LottieAnimationView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/lottieAnimationView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/ussd_interface" />
+        android:src="@drawable/logo_app" />
 
     <ProgressBar
         android:id="@+id/progessbar"
@@ -34,7 +32,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="@dimen/_10sdp"
         android:visibility="gone"
         tools:visibility="visible"
@@ -63,7 +61,7 @@
             android:gravity="center"
             android:textSize="@dimen/_13sdp"
             android:text="@string/poor_connection2"
-            android:textColor="@color/white" />
+            android:textColor="@color/black" />
 
         <ImageView
             android:layout_width="wrap_content"
