--- a/app/src/main/res/layout/fragment_intro.xml
+++ b/app/src/main/res/layout/fragment_intro.xml
@@ -26,6 +26,20 @@
         app:layout_constraintEnd_toEndOf="@+id/txt_poor_connection"
         app:layout_constraintStart_toStartOf="@+id/txt_poor_connection" />
 
+    <TextView
+        android:id="@+id/txt_app"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/iran_sans_mobile"
+        android:text="@string/str_pharoma_intro"
+        android:textColor="@color/black"
+        android:textSize="@dimen/_17sdp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/lottieAnimationView"
+        app:layout_constraintStart_toStartOf="@+id/lottieAnimationView"
+        app:layout_constraintTop_toBottomOf="@+id/lottieAnimationView"
+        tools:visibility="visible" />
+
 
     <TextView
         android:id="@+id/txt_poor_connection"
@@ -48,6 +62,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:visibility="gone"
+
         tools:visibility="visible"
         android:layout_marginBottom="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
